# media-manager

./: Cargo.toml  README.md
src/: cli.rs  interface.rs  lib.rs  main.rs  mediafile.rs  scan.rs  scrap.rs  search.rs  write2.rs
tests/: test_scan.rs  test_scrap.rs  test_search.rs  test_tag.rs  test_write2.rs
tests/test_datas/filtrage_un/: save.json
tests/test_datas/tag_nonvide/: CarSpeed.txt  save.json
tests/test_datas/tout_type/: playlist.m3u  save.json
