[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.25", features = [ "derive" ]}
walkdir = "2.3.2"
id3 = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
markdown-gen = "1.2.1"
m3u = "1.0.0"
reqwest = "0.9.22"
dialoguer = "0.10.2"
mp4ameta = "0.11.0"